--- a/index.html
+++ b/index.html
@@ -9,12 +9,10 @@
     <link rel="icon" href="/favicon.ico" type="image/svg+xml"/> <!-- browser theme aware favicon -->
     <meta name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=5, minimum-scale=1" />
-    <meta name="description"
-      content="GoerliDAO utilizes Treasury Reserves to enable long-term price consistency and scarcity within an infinite supply system" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 
     <link rel="manifest" href="/manifest.json" crossorigin="use-credentials" />
-    <title>GoerliDAO</title>
+    <title>GoerliDAO - More than just a testnet.</title>
 
     <link rel="preconnect" href="https://api.thegraph.com" crossOrigin="anonymous" />
     <link rel="preconnect" href="https://eth-mainnet.alchemyapi.io" crossOrigin="anonymous" />
