remove donation countdown

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <link rel="manifest" href="/manifest.json" crossorigin="use-credentials" />
     <title>GoerliDAO - More than just a testnet.</title>
+    <meta property="og:image" content="/favicon-32x32.png">
 
     <link rel="preconnect" href="https://api.thegraph.com" crossOrigin="anonymous" />
     <link rel="preconnect" href="https://eth-mainnet.alchemyapi.io" crossOrigin="anonymous" />
